install docker-compose

--- a/roles/docker/tasks/main.yml
+++ b/roles/docker/tasks/main.yml
@@ -18,3 +18,8 @@
 - name: restart docker(systemd)
   shell: systemctl daemon-reload
   notify: restart docker (systemd)
+- name: install docker-compose
+  get_url:
+    url: "https://github.com/docker/compose/releases/download/1.6.2/docker-compose-Linux-x86_64"
+    dest: "/usr/local/bin/docker-compose"
+    mode: a+x
